added new code with working payment page